Update styles across multiple components to improve layout and prevent overflow issues
- Added 'overflow-x: hidden' to hero, about-me, skill-set, and projects components to enhance layout consistency.
- Adjusted padding in the thoughts component for better responsiveness on smaller screens.

--- a/src/app/sections/01_hero/hero.component.scss
+++ b/src/app/sections/01_hero/hero.component.scss
@@ -9,6 +9,7 @@
   margin: 0 auto;
   color: #fff;
   min-height: 1100px;
+  overflow-x: hidden;
 
 
   &.png-loaded::before {
