--- a/src/app/sections/02_about-me/about-me.component.scss
+++ b/src/app/sections/02_about-me/about-me.component.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  overflow-x: hidden;
   @media (max-width: 768px) {
     flex-direction: column-reverse;
   }
