--- a/src/app/sections/04_projects/projects.component.scss
+++ b/src/app/sections/04_projects/projects.component.scss
@@ -21,6 +21,7 @@
   align-items: center;
   justify-content: space-between;
   font-family: "Bricolage Grotesque";
+  overflow-x: hidden;
   @media (max-width: 768px) {
     flex-direction: column;
     height: 100%;
