--- a/src/app/sections/05_thoughts/thoughts.component.scss
+++ b/src/app/sections/05_thoughts/thoughts.component.scss
@@ -80,11 +80,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-left: 2%;
+    padding-right: 2%;
     @media (max-width: 768px) {
         flex-direction: column;
         width: 100%;
-        padding-left: 2%;
-        padding-right: 2%;
+        padding-left: 4%;
+        padding-right: 4%;
 
     }
 }
